--- a/src/Inceptum.Applications.EventStoreNode.Single/Inceptum.Applications.EventStoreNode.Single.csproj
+++ b/src/Inceptum.Applications.EventStoreNode.Single/Inceptum.Applications.EventStoreNode.Single.csproj
@@ -119,14 +119,14 @@
       <Link>Content\%(RecursiveDir)%(FileName)%(Extension)</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="..\..\eventstore\js1.dll">
+    <None Include="..\..\eventstore\js1.dll">
       <Link>js1.dll</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="..\..\eventstore\js1.pdb">
+    </None>
+    <None Include="..\..\eventstore\js1.pdb">
       <Link>js1.pdb</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
