--- a/src/Inceptum.Applications.EventStoreNode.Common/Inceptum.Applications.EventStoreNode.Common.csproj
+++ b/src/Inceptum.Applications.EventStoreNode.Common/Inceptum.Applications.EventStoreNode.Common.csproj
@@ -60,11 +60,9 @@
     <Reference Include="EventStore.Web">
       <HintPath>..\..\eventstore\EventStore.Web.dll</HintPath>
     </Reference>
-    <Reference Include="EventStore.Web.Playground">
-      <HintPath>..\..\eventstore\EventStore.Web.Playground.exe</HintPath>
-    </Reference>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\packages\Newtonsoft.Json.5.0.8\lib\net45\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Newtonsoft.Json.6.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="NLog">
       <HintPath>..\packages\NLog.2.0.0.2000\lib\net40\NLog.dll</HintPath>
