--- a/src/Inceptum.Applications.EventStoreNode.Tests/packages.config
+++ b/src/Inceptum.Applications.EventStoreNode.Tests/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.1" targetFramework="net45" />
   <package id="NLog" version="2.0.0.2000" targetFramework="net45" allowedVersions="[2.0.0.2000]" />
+  <package id="NUnit" version="2.6.3" targetFramework="net45" />
   <package id="protobuf-net" version="2.0.0.594" targetFramework="net45" allowedVersions="[2.0.0.594]" />
 </packages>
