--- a/src/Inceptum.Applications.EventStoreNode.Tests/Inceptum.Applications.EventStoreNode.Tests.csproj
+++ b/src/Inceptum.Applications.EventStoreNode.Tests/Inceptum.Applications.EventStoreNode.Tests.csproj
@@ -54,6 +54,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\SolutionInfo.cs">
+      <Link>Properties\SolutionInfo.cs</Link>
+    </Compile>
+    <Compile Include="..\VersionInfo.cs">
+      <Link>Properties\VersionInfo.cs</Link>
+    </Compile>
     <Compile Include="SimpleTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
