--- a/src/Inceptum.Applications.EventStoreNode/Application.nuspec
+++ b/src/Inceptum.Applications.EventStoreNode/Application.nuspec
@@ -26,12 +26,13 @@
     <file src="bin\$Configuration$\EventStore.Core.pdb" target="lib\net45\" />
     <file src="bin\$Configuration$\EventStore.Projections.Core.dll" target="lib\net45\" />
     <file src="bin\$Configuration$\EventStore.Projections.Core.pdb" target="lib\net45\" />
+    <file src="bin\$Configuration$\EventStore.Rags.dll" target="lib\net45\" />
     <file src="bin\$Configuration$\EventStore.Transport.Http.dll" target="lib\net45\" />
     <file src="bin\$Configuration$\EventStore.Transport.Http.pdb" target="lib\net45\" />
     <file src="bin\$Configuration$\EventStore.Transport.Tcp.dll" target="lib\net45\" />
     <file src="bin\$Configuration$\EventStore.Transport.Tcp.pdb" target="lib\net45\" />
-    <file src="bin\$Configuration$\EventStore.Web.dll" target="lib\net45\" />
-    <file src="bin\$Configuration$\EventStore.Web.pdb" target="lib\net45\" />
+    <file src="bin\$Configuration$\HdrHistogram.NET.dll" target="lib\net45\" />
+    <file src="bin\$Configuration$\HdrHistogram.NET.pdb" target="lib\net45\" />
     <file src="bin\$Configuration$\js1.dll" target="native\x64\" />
     <file src="bin\$Configuration$\js1.pdb" target="native\x64\" />
   </files>
